# Horario

./: .gitignore  NOTAS.md  README.md  generar.py  generar_tribunales.py  guia_de_uso.md  guia_de_uso_tribunales.md  propuesta-de-horarios-2026-07-03-para-enviar.ods  propuesta-de-horarios-2026-07-03-para-enviar.xlsx  pyproject.toml
comun/: estilos_base.py  formato.py  leyenda.py
config/: asignaciones.yaml  facultad-completa.yaml  facultad.yaml  horarios-completo.yaml  horarios.yaml  tribunal.yaml
docs/superpowers/plans/: 2026-07-05-generador-horarios.md
docs/superpowers/specs/: 2026-07-05-generador-horarios-design.md
ejemplos-generados/: propuesta-completa.xlsx  propuesta-simple.xlsx
horarios/: config.py  estilos.py  formato.py  generador.py  hoja_aulas.py  hoja_datos.py  hoja_grupo.py  layout.py  leyenda.py  modelo.py
tests/: test_cli.py  test_cli_tribunales.py  test_config.py  test_config_tribunales.py  test_estilos.py  test_formato.py  test_generador.py  test_generador_tribunales.py  test_hoja_aulas.py  test_hoja_datos.py  test_hoja_datos_tribunales.py  test_hoja_dia.py  test_hoja_grupo.py  test_hoja_localizar.py  test_layout.py  test_layout_tribunales.py  test_leyenda.py  test_modelo.py  test_modelo_tribunales.py
tribunales/: config.py  estilos.py  generador.py  hoja_datos.py  hoja_dia.py  hoja_localizar.py  layout.py  modelo.py
