[project]
name = "tesis-horarios"
version = "0.1.0"
description = "Generador de horarios de la facultad (Python + openpyxl)"
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["horarios*"]
